<resources>
    <string name="third_fragment">Hello fragment third</string>
    <string name="second_fragment">Hello fragment second</string>
    <string name="first_fragment">Hello fragment one</string>
    <string name="app_name">Burp3</string>
    <string name="Name1">Hello Everyone!!</string>
    <string name="Name2">Enter Name</string>

    <string name="text_view_1">Enter Name</string>
    <string name="hint_1">Name</string>
    <string name="text_view_2">Enter Address</string>
    <string name="hint_2">Address</string>
    <string name="text_view_3">Enter Email</string>
    <string name="hint_3">Email</string>
    <string name="text_view_4">Enter Phone Number</string>
    <string name="hint_4">Phone Number</string>
    <string name="button_1">Submit</string>

    <string-array name="department">
        <item>BCA</item>
        <item>CSIT</item>
        <item>BBA</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>